--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -208,6 +208,15 @@
       @include rule(height, (xl: 14px, xlg: 14, lg: 14, md: 14, sm: 14));
     }
 
+    &_plus {
+      @include rule(width, (xl: 7px, xlg: 7, lg: 7, md: 7, sm: 7));
+      @include rule(height, (xl: 7px, xlg: 7, lg: 7, md: 7, sm: 7));
+
+      &:not(:first-child) {
+        @include rule(margin-left, (xl: 7px, xlg: 7, lg: 7, md: 7, sm: 7));
+      }
+    }
+
     &_call {
       @include rule(width, (xl: 26px, xlg: 26, lg: 26, md: 26, sm: 26));
       @include rule(height, (xl: 26px, xlg: 26, lg: 26, md: 26, sm: 26));
