--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -1464,11 +1464,11 @@
       @include rule(margin-top, (sm: 25));
     }
 
-    .layout_static & {
-      &:not(:first-child) {
-        @include rule(margin-top, (xl: 25px, xlg: 25, lg: 25, md: 25, sm: 25));
-      }
-    }
+    // .layout_static & {
+    //   &:not(:first-child) {
+    //     @include rule(margin-top, (xl: 25px, xlg: 25, lg: 25, md: 25, sm: 25));
+    //   }
+    // }
 
     &:not(:last-child) {
       @include rule(margin-bottom, (xl: 67px, xlg: 67, lg: 50, md: 35, sm: 0));
