--- a/app/blocks/space-gallery/space-gallery.scss
+++ b/app/blocks/space-gallery/space-gallery.scss
@@ -31,11 +31,11 @@
     width: 100%;
   }
 
-  .layout_static & {
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
-  }
+  // .layout_static & {
+  //   width: 100%;
+  //   margin-left: 0;
+  //   margin-right: 0;
+  // }
 
   &__wrapper {
     width: 100%;
