--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -420,9 +420,7 @@
       }
     }
 
-    .layout-space-active &,
-    .layout-offer-active &,
-    .is-layout-offer-out & {
+    .layout-list-active & {
       transform: translate3d(0, -20%, 0);
     }
 
