--- a/app/components/offer-description/offer-description.scss
+++ b/app/components/offer-description/offer-description.scss
@@ -60,17 +60,17 @@
       @include rule(margin-top, (sm: 20));
     }
 
-    .layout_static & {
-      width: 100%;
-      margin-left: 0;
-      margin-right: 0;
+    // .layout_static & {
+    //   width: 100%;
+    //   margin-left: 0;
+    //   margin-right: 0;
 
-      @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 3));
+    //   @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 3));
 
-      &:not(:first-child) {
-        @include rule(margin-top, (xl: 18px, xlg: 18, lg: 15, md: 15, sm: 20));
-      }
-    }
+    //   &:not(:first-child) {
+    //     @include rule(margin-top, (xl: 18px, xlg: 18, lg: 15, md: 15, sm: 20));
+    //   }
+    // }
   }
 
   &__media-image {
