--- a/app/blocks/layout-header/layout-header.scss
+++ b/app/blocks/layout-header/layout-header.scss
@@ -4,31 +4,28 @@
   display: flex;
   justify-content: flex-start;
   z-index: 5;
-  background-color: $nd-color-bg;
+  background-color: $nd-color-basic-light;
   pointer-events: auto;
 
-  @include rule(height, (xl: 142px, xlg: 142, lg: 106, md: 80, sm: 60));
+  @include rule(height, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
 
   &__boxes {
     display: flex;
     justify-content: flex-start;
     align-items: center;
 
-    #{$b}_main & {
-      &:not(:last-child) {
-        @include rule(margin-right, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
-      }
+    @include screen('sm', max, 2) {
+      display: none;
+    }
+
+    &:not(:last-child) {
+      @include rule(margin-right, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
     }
   }
 
   &__box {
-    @include rule(width, (xl: 12px, xlg: 12, lg: 10, md: 6, sm: 6));
-    @include rule(height, (xl: 12px, xlg: 12, lg: 10, md: 6, sm: 6));
-
-    #{$b}_main & {
-      @include rule(width, (xl: 8px, xlg: 8, lg: 8, md: 8, sm: 6));
-      @include rule(height, (xl: 8px, xlg: 8, lg: 8, md: 8, sm: 6));
-    }
+    @include rule(width, (xl: 8px, xlg: 8, lg: 8, md: 8, sm: 6));
+    @include rule(height, (xl: 8px, xlg: 8, lg: 8, md: 8, sm: 6));
   }
 
   &__title {
@@ -36,12 +33,12 @@
     font-family: $font-stolzl;
     font-weight: 400;
     letter-spacing: normal;
-    line-height: 1.19;
 
-    @include rule(font-size, (xl: 30px, xlg: 30, lg: 24, md: 18, sm: 18));
+    @include rule(line-height, (xl: 18px, xlg: 18, lg: 18, md: 18, sm: 18));
+    @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 18, sm: 18));
 
-    #{$b}_main & {
-      @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 18, sm: 18));
+    @include screen('sm', max, 2) {
+      display: none;
     }
   }
 
@@ -68,15 +65,16 @@
   &__close {
     @include rule(width, (xl: 104px, xlg: 104, lg: 72, md: 50, sm: 60));
 
-    border-right: 1px solid $nd-color-border6;
+    // border-right: 1px solid $nd-color-border6;
     flex: none;
 
     svg {
       @include rule(width, (xl: 18px, xlg: 18, lg: 18, md: 15, sm: 15));
       @include rule(height, (xl: 18px, xlg: 18, lg: 18, md: 15, sm: 15));
+      transition: opacity $ease-main;
 
       @include screen('sm', max, 2) {
-        display: none;
+        opacity: 0;
       }
     }
 
@@ -86,6 +84,77 @@
       background-image: $icon-arrow5;
       border-right: none;
       background-size: pxtovw(22, 375);
+    }
+
+    .layout-offer-active &,
+    .layout-space-active &,
+    .layout-list-active & {
+      svg {
+        opacity: 1;
+        background-image: none;
+      }
+
+      @include screen('sm', max, 2) {
+        background-image: none;
+      }
+    }
+
+    .layout-offer-active.map-in-fullview &,
+    .layout-space-active.map-in-fullview &{
+      svg {
+        opacity: 0;
+
+        @include screen('sm', max, 2) {
+          opacity: 1;
+        }
+      }
+
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      background-image: $icon-arrow5;
+
+      @include rule(background-size, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 22));
+
+      @include screen('sm', max, 2) {
+        background-image: none;
+      }
+    }
+
+    .layout-space-active.layout-offer-active & {
+      svg {
+        opacity: 0;
+      }
+
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      background-image: $icon-arrow5;
+      border-right: none;
+
+      @include rule(background-size, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 22));
+    }
+
+    #{$b}_page & {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      background-color: $nd-color-basic-light;
+      z-index: 1;
+      transition: opacity $ease-main;
+      pointer-events: none;
+      opacity: 0;
+
+      @include rule(width, (xl: 104px, xlg: 104, lg: 104, md: 104, sm: 60));
+
+      @include screen('sm', max, 2) {
+        opacity: 1;
+        pointer-events: auto;
+      }
+
+      .layout-offer-active & {
+        opacity: 1;
+        pointer-events: auto;
+      }
     }
   }
 
@@ -103,6 +172,39 @@
       left: 50%;
       transform-origin: 50% 50%;
       transform: translate3d(-50%, -50%, 0);
+    }
+  }
+
+  &__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @include rule(width, (xl: 104px, xlg: 104, lg: 104, md: 104, sm: 60));
+
+    .nd-logo {
+      @include screen('sm', max, 2) {
+        display: none;
+      }
+    }
+  }
+
+  &__link {
+    letter-spacing: -0.015em;
+    font-family: $font-stolzl;
+    font-weight: 400;
+    transition: opacity $ease-main;
+
+    @include rule(line-height, (xl: 18px, xlg: 18, lg: 18, md: 18, sm: 18));
+    @include rule(font-size, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 13));
+
+    &:not(:first-child) {
+      @include rule(margin-left, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 30));
+    }
+
+    .layout-space-active & {
+      opacity: 0;
+      pointer-events: none;
     }
   }
 
@@ -317,14 +419,6 @@
     background-color: $nd-color-bg;
   }
 
-  &_main.layout-header_popup {
-    border-right: 1px solid $nd-color-border6;
-
-    @include screen('sm', max, 2) {
-      border-right: none;
-    }
-  }
-
   .drop-navigation {
 
     &__head {
@@ -335,13 +429,13 @@
 
     &__item {
       &:not(:last-child) {
-        margin-right: 40px;
+        margin-right: 20px;
 
         @include screen('xl', max, 2) {
-          margin-right: 25px;
+          margin-right: 15px;
         }
 
-        @include rule(margin-right, (xlg: 28, lg: 28, md: 0, sm: 0));
+        @include rule(margin-right, (xlg: 15, lg: 15, md: 0, sm: 0));
       }
     }
   }
@@ -350,6 +444,13 @@
     &__dropdown .drop-navigation__link{
       @include rule(padding-bottom, (xl: 22px, xlg: 22, lg: 22, md: 10, sm: 10));
       @include rule(padding-top, (xl: 22px, xlg: 22, lg: 22, md: 10, sm: 10));
+    }
+
+    &__wrapper {
+      @include screen('md', min, 2) {
+        width: 100%;
+        justify-content: space-between;
+      }
     }
   }
 
