--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -100,23 +100,23 @@
       }
 
       @include screen('md', min, 2) {
-        z-index: 7;
+        z-index: 9;
       }
 
-      .layout-offer-active &,
-      .is-layout-offer-out & {
-        @include screen('md', min, 2) {
-          z-index: 9;
-        }
-      }
+      // .layout-offer-active &,
+      // .is-layout-offer-out & {
+      //   @include screen('md', min, 2) {
+      //     z-index: 9;
+      //   }
+      // }
 
-      .layout-space-active &,
-      .layout-list-active &,
-      .map-in-fullview & {
-        @include screen('md', min, 2) {
-          z-index: 7;
-        }
-      }
+      // .layout-space-active &,
+      // .layout-list-active &,
+      // .map-in-fullview & {
+      //   @include screen('md', min, 2) {
+      //     z-index: 7;
+      //   }
+      // }
 
       .map-in-fullview & {
         animation: map-hor-animation .5s ease-in-out forwards 1;
@@ -155,7 +155,6 @@
       overflow: hidden;
       border-right: 1px solid $nd-color-border6;
       border-top: 1px solid $nd-color-border6;
-      border-bottom: 1px solid $nd-color-border6;
 
       @include screen('md', max, 2) {
         grid-column: 1 / 2;
@@ -175,7 +174,6 @@
       height: 100%;
       overflow: hidden;
       border-top: 1px solid $nd-color-border6;
-      border-bottom: 1px solid $nd-color-border6;
 
       @include screen('md', max, 2) {
         grid-column: 2 / 3;
@@ -188,7 +186,7 @@
       }
 
       @include screen('sm', min, 2) {
-        z-index: 12;
+        z-index: 13;
       }
 
       &.layout__column_popup {
@@ -207,7 +205,7 @@
       visibility: hidden;
       background-color: $nd-color-bg;
       overflow: visible;
-      z-index: 7;
+      z-index: 11;
       // opacity: 0;
       transform: translate3d(100vw, 0, 0);
       transition: transform .5s ease-in-out;
@@ -226,20 +224,22 @@
         background-color: $nd-color-basic-light;
       }
 
-      &.layout__column_end {
+      &.is-current {
         @include screen('sm', min, 2) {
           z-index: 12;
         }
       }
 
-      &.layout__column_start_offer {
-        z-index: 8;
+      &.layout__column_end {
+        @include screen('sm', min, 2) {
+          z-index: 13;
+        }
       }
 
-      &.layout__column_start_header {
-        z-index: 11;
-        background-color: transparent;
-      }
+
+      // &.layout__column_start_offer {
+      //   z-index: 8;
+      // }
 
       .map-in-fullview & {
         &.layout__column_end {
@@ -264,11 +264,11 @@
         }
       }
 
-      .map-in-fullview.layout-offer-active & {
-        &.layout__column_end {
-          box-shadow: 0 0 0 0 transparent;
-        }
-      }
+      // .map-in-fullview.layout-offer-active & {
+      //   &.layout__column_end {
+      //     box-shadow: 0 0 0 0 transparent;
+      //   }
+      // }
 
       &.is-layout-animated-out {
         visibility: visible;
@@ -295,8 +295,7 @@
           pointer-events: auto;
         }
 
-        &.layout__column_start_space,
-        &.layout__column_start_header {
+        &.layout__column_start_space {
           @include screen('md', max, 2) {
             left: 0;
             width: 68.75vw;
@@ -305,10 +304,6 @@
           @include screen('sm', max, 2) {
             width: 100%;
           }
-        }
-
-        &.layout__column_start_header {
-          pointer-events: none;
         }
 
         &.layout__column_end {
@@ -353,8 +348,7 @@
           pointer-events: auto;
         }
 
-        &.layout__column_start_offer,
-        &.layout__column_start_header {
+        &.layout__column_start_offer {
           @include screen('md', max, 2) {
             left: 0;
             width: 68.75vw;
@@ -363,10 +357,6 @@
           @include screen('sm', max, 2) {
             width: 100%;
           }
-        }
-
-        &.layout__column_start_header {
-          pointer-events: none;
         }
 
         &.layout__column_end {
@@ -401,6 +391,73 @@
 
           @include screen('sm', max, 2) {
             width: 100%;
+          }
+        }
+      }
+    }
+
+    &_header {
+      position: fixed;
+      display: flex;
+      top: 0;
+      left: 0;
+      bottom: auto;
+      width: 100%;
+      height: auto;
+      z-index: 14;
+      pointer-events: auto;
+      background-color: transparent;
+      box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06));
+
+      @include screen('xlg') {
+        box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06), 1660);
+      }
+
+      @include screen('lg') {
+        box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06), 1366);
+      }
+
+      @include screen('md') {
+        box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06), 960);
+      }
+
+      @include screen('sm') {
+        box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06), 375);
+      }
+
+      @include screen('sm', max, 2) {
+        box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06), 375);
+      }
+
+      &.is-current {
+        z-index: 14;
+      }
+
+      .layout-header {
+        &_main {
+          width: 58.49vw;
+          border-right: 1px solid $nd-color-border6;
+          box-sizing: border-box;
+
+          @include screen('lg', max, 2) {
+            width: 52.93vw;
+          }
+
+          @include screen('md', max, 2) {
+            width: 68.75vw;
+          }
+
+          @include screen('sm', max, 2) {
+            width: 100%;
+            border-right: none;
+          }
+        }
+
+        &_sort {
+          flex: 1;
+
+          @include screen('sm', max, 2) {
+            display: none;
           }
         }
       }
@@ -456,40 +513,43 @@
         @include rule(padding-right, (xl: 25px, xlg: 25, lg: 25, md: 25, sm: 20));
       }
 
-      .layout_static & {
-        @include rule(padding-top, (xl: 11px, xlg: 11, lg: 19, md: 116, sm: 0));
-      }
+      // .layout_static & {
+      //   @include rule(padding-top, (xl: 11px, xlg: 11, lg: 19, md: 116, sm: 0));
+      // }
     }
 
     #{$b}__column_popup & {
       overscroll-behavior: none;
     }
 
-    #{$b}__column_popup.layout__column_start_space & {
+    .layout__column_start_space & {
       @include rule(padding-top, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
     }
 
-    #{$b}__column_popup.layout__column_start_offer & {
+    .layout__column_start_offer & {
       @include rule(padding-top, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
       @include rule(padding-right, (xl: 50px, xlg: 50, lg: 50, md: 40, sm: 20));
 
-      .layout_static & {
-        @include rule(padding-top, (xl: 50px, xlg: 50, lg: 14, md: 18, sm: 60));
-      }
+      // .layout_static & {
+      //   @include rule(padding-top, (xl: 50px, xlg: 50, lg: 14, md: 18, sm: 60));
+      // }
     }
   }
 
   &_static {
-    grid-template-rows: calc(100vh - 94px);
+    // grid-template-rows: calc(100vh - 94px);
+    grid-template-rows: 100vh;
+    box-sizing: border-box;
+    border-bottom: 1px solid $nd-color-border6;
 
-    @include rule(padding-top, (xl: 94px, xlg: 94, lg: 66, md: 66, sm: 0));
+    // @include rule(padding-top, (xl: 94px, xlg: 94, lg: 66, md: 66, sm: 0));
 
     @include screen("xlg", max, 2) {
-      grid-template-rows: calc(100vh - (9400 / 1660) * 1vw);
+      // grid-template-rows: calc(100vh - (9400 / 1660) * 1vw);
     }
 
     @include screen("lg", max, 2) {
-      grid-template-rows: calc(100vh - (6600 / 1366) * 1vw);
+      // grid-template-rows: calc(100vh - (6600 / 1366) * 1vw);
     }
 
     @include screen("md", max, 2) {
@@ -545,7 +605,7 @@
           background-color: $nd-color-bg;
 
           .layout__wrapper {
-            @include rule(padding-top, (xl: 139px, xlg: 139, lg: 66, md: 96, sm: 0));
+            @include rule(padding-top, (xl: 71px, xlg: 71, lg: 79, md: 95, sm: 0));
           }
         }
       }
