--- a/app/layouts/redesign-default.pug
+++ b/app/layouts/redesign-default.pug
@@ -8,6 +8,7 @@ html(lang='en')
   - var bodyClass = bodyCls || ''
   - var noFooter = isNoFooter || false
   - var noHeader = isNoHeader || false
+  - var showUserPanel = isUserPanel || false
   - if (noFooter) bodyClass += ' is-nofooter'
   - if (noHeader) bodyClass += ' is-noheader'
   body(class='no-js-scale nd ' + bodyClass)
@@ -60,6 +61,30 @@ html(lang='en')
         else
           each item in messages
             +info-notice(item).__notice
+    else if (noHeader && showUserPanel)
+      +nd-user-menu-panel(isHost, noUser, isSearch)
+      +nd-main-menu(menuData, isHost, noUser)
+      +nd-info-notices({title: 'Notifications', link: {name: 'Read all notifications'}})#events-list
+        if isHost == 'manager'
+          +text-block._gray._empty.__info
+            +e.image_calendar
+              img(src="assets/images/nd/nd-calendar.svg")
+            +e.title_fz20 Nothing here yet
+            +e.content_fz15 In this window you will see notifications about every activity inside your account. Stay tuned through this tooltip and notification page
+        else
+          each item in events
+            +info-notice(item).__notice
+      +nd-info-notices({title: 'Messages', link: {name: 'Read all messages'}})#messages-list
+        if isHost == 'manager'
+          +text-block._gray._empty.__info
+            +e.image_bubble
+              img(src="assets/images/nd/nd-chat.svg")
+            +e.title_fz20 Nothing here yet
+            +e.content_fz15 In this window you can see all the messages you receive within rental deals.
+        else
+          each item in messages
+            +info-notice(item).__notice
+
 
     +b.MAIN(class='nd-page' + pageCls)
       block content
