fix scroll space page at safari

--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -538,7 +538,7 @@
 
   &_static {
     // grid-template-rows: calc(100vh - 94px);
-    grid-template-rows: 100vh;
+    grid-template-rows: 100%;
     box-sizing: border-box;
     border-bottom: 1px solid $nd-color-border6;
 
