crutch for scroll in space page at safari

--- a/app/blocks/space-gallery/space-gallery.pug
+++ b/app/blocks/space-gallery/space-gallery.pug
@@ -10,7 +10,7 @@ mixin space-gallery()
       +e.PICTURE.image_small._small_bottom
         source(srcset='assets/images/nd/space33.jpg')
         img(src='assets/images/nd/space33.jpg')
-      +nd-button._pad10._h22._fz13.__button.js-fancygallery(data-targets='space-gallery' type="button") View gallery
+      +nd-button('button')._pad10._h22._fz13.__button.js-fancygallery(data-targets='space-gallery' type="button") View gallery
       +nd-link().__hidden-images(href='assets/images/nd/space-hq-31.jpg' data-target='space-gallery' hidden)
       +nd-link().__hidden-images(href='assets/images/nd/space-hq-32.jpg' data-target='space-gallery' hidden)
       +nd-link().__hidden-images(href='assets/images/nd/space-hq-33.jpg' data-target='space-gallery' hidden)
