--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -290,6 +290,32 @@
       overflow: hidden;
     }
 
+    &::before {
+      @include pseudo;
+      @include rule(height, (xl: 92px, xlg: 92, lg: 86, md: 76, sm: 0));
+      @include uRule(width, (xl: 58.49%, lg: 52.93%, md: 100%));
+      @include uRule(background, (xl: linear-gradient(180deg, #f2f6f7 34.38%, rgba(242, 246, 247, 0) 100%), md: linear-gradient(180deg, #f2f6f7 34.38%, #f2f6f7 100%)));
+
+      top: -1px;
+      left: 0;
+      pointer-events: none;
+      transition: opacity $ease-main, transform $ease-main;
+
+      @include screen('sm', max, 2) {
+        display: none;
+      }
+
+      .map-in-fullview & {
+        transition: opacity 0s ease, transform 0s ease;
+        opacity: 0;
+
+        @include screen('md', max, 2) {
+          transition: opacity $ease-main,
+          transform $ease-main;
+        }
+      }
+    }
+
     #{$b} {
       &__wrapper {
         position: relative;
@@ -445,25 +471,25 @@
         z-index: 1;
       }
 
-      &::before {
-        @include screen('md', max, 2) {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          content: '';
-          display: block;
-          transform: translate3d(-50%, -50%, 0);
-          height: pxtovw(46, 960);
-          width: calc(100% + (1000 / 960)*1vw);
-          background-color: $nd-color-basic-light;
-          z-index: 0;
-          border-radius: pxtovw(35, 960);
-        }
+      // &::before {
+      //   @include screen('md', max, 2) {
+      //     position: absolute;
+      //     top: 50%;
+      //     left: 50%;
+      //     content: '';
+      //     display: block;
+      //     transform: translate3d(-50%, -50%, 0);
+      //     height: pxtovw(46, 960);
+      //     width: calc(100% + (1000 / 960)*1vw);
+      //     background-color: $nd-color-basic-light;
+      //     z-index: 0;
+      //     border-radius: pxtovw(35, 960);
+      //   }
 
-        @include screen('sm', max, 2) {
-          display: none
-        }
-      }
+      //   @include screen('sm', max, 2) {
+      //     display: none
+      //   }
+      // }
     }
 
     .map-button {
