fix 7 from https://docs.google.com/document/d/1-ofVmjqVD1PQJFilBKaApiZxQ_crHYmTXskECMqjpGw/edit and correct animation for overlays

--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -229,6 +229,10 @@
         }
       }
 
+      &.layout__column_start {
+        transition-delay: 0;
+      }
+
       &.layout__column_header {
         transform: translate3d(0, -100%, 0);
       }
@@ -240,6 +244,10 @@
       }
 
       .map-in-fullview & {
+        &.layout-column_start {
+
+        }
+
         &.layout__column_end {
           box-shadow: boxShadow(-11, 0, 11, 0, rgba(0, 0, 0, 0.14), false);
 
@@ -287,12 +295,15 @@
         }
 
         &.layout__column_start_space {
+          transition-delay: .45s;
+
           @include screen('md', max, 2) {
             left: 0;
             width: 68.75vw;
           }
 
           @include screen('sm', max, 2) {
+            transition-delay: 0s;
             width: 100%;
           }
         }
@@ -340,12 +351,15 @@
         }
 
         &.layout__column_start_offer {
+          transition-delay: .45s;
+
           @include screen('md', max, 2) {
             left: 0;
             width: 68.75vw;
           }
 
           @include screen('sm', max, 2) {
+            transition-delay: 0s;
             width: 100%;
           }
         }
@@ -362,6 +376,12 @@
         }
       }
 
+      .map-in-fullview.layout-offer-active &, .map-in-fullview.layout-space-active & {
+        &.layout__column_start {
+          transition-delay: 0s;
+        }
+      }
+
       &.is-layout-animated-out {
         &.layout__column_end {
           @include screen('md', max, 2) {
@@ -375,6 +395,8 @@
         }
 
         &.layout__column_start {
+          transition-delay: 0s;
+
           @include screen('md', max, 2) {
             left: 0;
             width: 68.75vw;
