--- a/app/pages/newest/space/space-v4.pug
+++ b/app/pages/newest/space/space-v4.pug
@@ -65,7 +65,7 @@ block content
     +e.column_start._start_offer._popup(data-layout="offer")
       +e.wrapper
         +offer-description
-        +offer-description-panel()._abs(data-offer-panel)
+        +offer-description-panel()._abs.is-visible(data-offer-panel)
           +e.offer
             +space-type._gray.__type
               +nd-box()._green.__box_sz7
