updated side form on one space page (space-v3.html)

--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -40,6 +40,11 @@
     #{$b}_underline & {
       text-decoration: underline;
     }
+
+    #{$b}_underline_blue & {
+      text-decoration: none;
+      background-image: linear-gradient($nd-color-main, $nd-color-main);
+    }
   }
 
   &:hover {
