--- a/app/pages/newest/space/space-v3.pug
+++ b/app/pages/newest/space/space-v3.pug
@@ -73,7 +73,7 @@ block content
 
       +nd-content-aside
         +sidebar.nd-sidebar.nd-hide-md
-          +scroll-form-v3(data-equalizer-target="space")
+          +scroll-form-v3-upd(data-equalizer-target="space")
 
       +e.column_footer
         +nd-section
