update single space page stage1

--- a/app/blocks/scrollbar/scrollbar.scss
+++ b/app/blocks/scrollbar/scrollbar.scss
@@ -173,3 +173,4 @@ $scrollbar-corner-background-color: transparent;
 @import 'scrollbar-wide.scss';
 @import 'scrollbar-bold.scss';
 @import 'scrollbar-messenger.scss';
+@import 'scrollbar-layout.scss';
