--- a/app/pages/newest/sitemap/redesign-sitemap.pug
+++ b/app/pages/newest/sitemap/redesign-sitemap.pug
@@ -46,6 +46,9 @@ block content
               +nd-link(href="search-v2.html") Spacepool - Search (search-v2.html)
               +nd-link(href="search-types-v2.html") Spacepool - Search by offer type (search-types-v2.html)
               +nd-link(href="space-v4.html") Spacepool - Space (space-v4.html)
+              +nd-link(href="space-v5.html") Spacepool - Space (space-v5.html)
+              +nd-link(href="space-v5_nolayout.html") Spacepool - Space (space-v5_nolayout.html)
+              +nd-link(href="single-offer.html") Spacepool - Space (single-offer.html)
           +e.group#nd-registration
             +e.head
               +page-title Registration Steps
