--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -232,6 +232,7 @@ $nd-color-payment-border: #e5eef0;
 $nd-color-selection-bg: #eff3fa;
 $nd-color-border6: #d5d7dc;
 $nd-layout-scroll: #b8babe;
+$nd-layout-scroll2: #c4c8d1;
 $nd-modal-output-placeholder: #555e68;
 $nd-color-small-offer: #dfe1e2;
 $nd-color-map-border: #b7b7b7;
