--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -103,21 +103,6 @@
         z-index: 9;
       }
 
-      // .layout-offer-active &,
-      // .is-layout-offer-out & {
-      //   @include screen('md', min, 2) {
-      //     z-index: 9;
-      //   }
-      // }
-
-      // .layout-space-active &,
-      // .layout-list-active &,
-      // .map-in-fullview & {
-      //   @include screen('md', min, 2) {
-      //     z-index: 7;
-      //   }
-      // }
-
       .map-in-fullview & {
         animation: map-hor-animation .5s ease-in-out forwards 1;
 
@@ -200,6 +185,7 @@
       position: absolute;
       width: 0;
       top: 0;
+      right: 0;
       bottom: 0;
       height: auto;
       visibility: hidden;
@@ -244,9 +230,6 @@
       }
 
       .map-in-fullview & {
-        &.layout-column_start {
-
-        }
 
         &.layout__column_end {
           box-shadow: boxShadow(-11, 0, 11, 0, rgba(0, 0, 0, 0.14), false);
@@ -525,10 +508,6 @@
         @include rule(padding-left, (xl: 25px, xlg: 25, lg: 30, md: 30, sm: 20));
         @include rule(padding-right, (xl: 25px, xlg: 25, lg: 25, md: 25, sm: 20));
       }
-
-      // .layout_static & {
-      //   @include rule(padding-top, (xl: 11px, xlg: 11, lg: 19, md: 116, sm: 0));
-      // }
     }
 
     #{$b}__column_popup & {
@@ -542,10 +521,6 @@
     .layout__column_start_offer & {
       @include rule(padding-top, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
       @include rule(padding-right, (xl: 50px, xlg: 50, lg: 50, md: 40, sm: 20));
-
-      // .layout_static & {
-      //   @include rule(padding-top, (xl: 50px, xlg: 50, lg: 14, md: 18, sm: 60));
-      // }
     }
   }
 
@@ -650,6 +625,62 @@
           pointer-events: none;
         }
       }
+    }
+  }
+
+  &_stable {
+    grid-template-rows: 100%;
+    height: auto;
+    max-height: none;
+    overflow-x: hidden;
+    overflow-y: auto;
+
+    #{$b} {
+      &__column {
+        box-sizing: border-box;
+
+        &_start {
+          grid-column: 1 / 3;
+          grid-row: 1 / 2;
+          height: auto;
+          overflow: auto;
+
+          @include rule(padding-right, (xl: 41.51%, lg: 47.07%, md: 31.25%, sm: 0));
+
+          @include screen('md', max, 2) {
+            grid-column: 1 / 3;
+            grid-row: 1 / 3;
+          }
+
+          @include screen('sm', max, 2) {
+            grid-column: 1 / 3;
+            grid-row: 1 / 2;
+          }
+
+          .layout__wrapper {
+            display: block;
+            box-sizing: border-box;
+            width: 100%;
+            height: auto;
+            max-height: none;
+          }
+        }
+
+        &_end {
+          position: fixed;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          background-color: $nd-color-bg;
+
+          @include rule(width, (xl: 41.51%, lg: 47.07%, md: 31.25%, sm: 0));
+          @include rule(box-shadow, (xl: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), false), xlg: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 1660), lg: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 1366), md: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 960), sm: none));
+        }
+      }
+    }
+
+    &_centered {
+
     }
   }
 }
