--- a/app/styles/helpers/_basics.scss
+++ b/app/styles/helpers/_basics.scss
@@ -2,6 +2,11 @@
 Убираем outline
 ########## */
 
+// * {
+//   box-sizing: border-box;
+//   border: 1px solid red;
+// }
+
 button::-moz-focus-inner {
   border: 0;
 }
