--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -35,6 +35,7 @@ include ../blocks/composite-tab/nd-composite-tab
 include ../blocks/content-zone/content-zone
 include ../blocks/contract-status/contract-status
 include ../blocks/conversation-info/conversation-info
+include ../blocks/copy-data/copy-data
 include ../blocks/credit-card/credit-card
 include ../blocks/datepicker/datepicker
 include ../blocks/detail/detail
@@ -171,6 +172,7 @@ include ../blocks/section/nd-section
 include ../blocks/section/section
 include ../blocks/selectable-block/selectable-block
 include ../blocks/selection/selection
+include ../blocks/share-socials/share-socials
 include ../blocks/short-info/short-info
 include ../blocks/short-profile/short-profile
 include ../blocks/short-space/short-space
@@ -318,6 +320,7 @@ include ../components/search-map/nd-search-map
 include ../components/search-map/nd-search-map-v2
 include ../components/search-map/search-map
 include ../components/search-panel/search-panel
+include ../components/share-popover/share-popover
 include ../components/side-navigation/side-navigation
 include ../components/space-card/space-card
 include ../components/space-description/space-description
