--- a/app/pages/newest/search/search-types-v2.pug
+++ b/app/pages/newest/search/search-types-v2.pug
@@ -154,6 +154,7 @@ block content
               else
                 +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=(item.value), data-modal-item-type="sort")
 block panels
+  +share-popover#share-popover
 
 block popups
   +nd-popup-arrange-viewing#nd-popup-arrange-viewing
