--- a/app/pages/newest/search/search-v2.pug
+++ b/app/pages/newest/search/search-v2.pug
@@ -147,6 +147,7 @@ block content
 
 
 block panels
+  +share-popover#share-popover
 
 block popups
   +nd-popup-arrange-viewing#nd-popup-arrange-viewing
