--- a/app/pages/newest/single-offer/single-offer.pug
+++ b/app/pages/newest/single-offer/single-offer.pug
@@ -24,9 +24,10 @@ block content
         +offer-description
 
     +e.column_header(data-layout="offer")
-      +layout-header({type: 'page', popup: true})._main._page
+      +layout-header({type: 'page', popup: true, offer: true})._main._page._centered
 
 block panels
+  +share-popover#share-popover
   //- +nd-offer-panel.nd-hide-from-md
 
 block popups
