--- a/app/pages/newest/space/space-v5_nolayout.pug
+++ b/app/pages/newest/space/space-v5_nolayout.pug
@@ -105,4 +105,5 @@ block content
           +nd-space-text()!=item.text
 
 block panels
+  +share-popover#share-popover
   //- +nd-offer-panel.nd-hide-from-md
