--- a/app/blocks/layout-header/layout-header.scss
+++ b/app/blocks/layout-header/layout-header.scss
@@ -228,7 +228,7 @@
       align-items: center;
 
       @include rule(padding-left, (xl: 22px, xlg: 22, lg: 22, md: 25, sm: 25));
-      @include rule(padding-right, (xl: 50px, xlg: 50, lg: 30, md: 40, sm: 25));
+      @include rule(padding-right, (xl: 30px, xlg: 30, lg: 30, md: 40, sm: 25));
     }
 
     #{$b}_sort & {
@@ -274,6 +274,16 @@
         flex: none;
         width: 100%;
       }
+    }
+
+    #{$b}_centered & {
+      box-sizing: border-box;
+      flex: 1;
+
+      @include cRule(margin, (xl: 0 auto, md: 0));
+      @include rule(max-width, (xl: 1124px, xlg: 1124, lg: 1124, md: 100%));
+      @include rule(padding-left, (xl: 30px, xlg: 30, lg: 30, md: 25, sm: 25));
+      @include rule(padding-right, (xl: 50px, xlg: 30, lg: 30, md: 40, sm: 25));
     }
   }
 
@@ -462,5 +472,11 @@
     &__dropdown .drop-navigation__link{
       @include rule(padding-bottom, (xl: 27px, xlg: 27, lg: 16, md: 10, sm: 10));
     }
+  }
+
+  &_centered {
+    box-sizing: border-box;
+
+    @include rule(padding-right, (xl: 104px, xlg: 104, lg: 104, md: 0));
   }
 }
